--- a/index.html
+++ b/index.html
@@ -101,21 +101,31 @@
       max-width: 100%;
     }
     .qr-wrapper { position: relative; }
-    .camera-check {
+    /* Modal-like overlay inside camera on successful camera scan */
+    .camera-modal {
       position: absolute;
-      top: 8px;
-      right: 8px;
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      background: #28a745; /* green */
+      inset: 0;
+      background: rgba(40, 167, 69, 0.9); /* green overlay */
       color: #fff;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-weight: 700;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      text-align: center;
+      border-radius: 12px;
     }
+    .camera-modal .icon {
+      width: 92px;
+      height: 92px;
+      border-radius: 50%;
+      border: 4px solid #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 48px;
+      margin: 0 auto 10px;
+      font-weight: 700;
+    }
+    .camera-modal .label { font-weight: 600; letter-spacing: 0.5px; }
     #qr-reader video,
     #qr-reader canvas,
     #qr-reader img,
@@ -261,7 +271,12 @@
           <h4 class="text-primary mb-3">Scan Student QR</h4>
           <div class="qr-wrapper mb-3">
             <div id="qr-reader"></div>
-            <div id="cameraCheck" class="camera-check d-none">✓</div>
+            <div id="cameraModal" class="camera-modal d-none">
+              <div>
+                <div class="icon">✓</div>
+                <div class="label">Camera Scan Successful</div>
+              </div>
+            </div>
           </div>
           
           <!-- NEW: Choose File Option -->
@@ -326,7 +341,7 @@
 
     // Initialize camera scanner
     const resultDiv = document.getElementById("qrResult");
-    const cameraCheck = document.getElementById('cameraCheck');
+    const cameraModal = document.getElementById('cameraModal');
     function onScanSuccess(decodedText) {
       try {
         const info = JSON.parse(decodedText);
@@ -341,10 +356,10 @@
           Contact: ${info.contact}
         `;
         resultDiv.classList.remove("d-none");
-        // Show green camera check ONLY for camera scans
+        // Show green modal overlay ONLY for camera scans
         if (!window._lastScanWasFile) {
-          cameraCheck.classList.remove('d-none');
-          setTimeout(() => cameraCheck.classList.add('d-none'), 1500);
+          cameraModal.classList.remove('d-none');
+          setTimeout(() => cameraModal.classList.add('d-none'), 1500);
         }
 
         // ✅ Auto fade out after 10 seconds
