--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
   <footer class="site-footer">
     <div class="container-fluid text-center">
-      <small>&copy; I LOVE YOU LANGGING</small>
+      <small>&copy; I LOVE YOU LANGGING | JANILYN</small>
     </div>
   </footer>
 
@@ -511,3 +511,4 @@
   </script>
 </body>
 </html>
+
