--- a/index.html
+++ b/index.html
@@ -272,7 +272,74 @@
                 </div>
                 <div class="mb-2">
                   <label>Nationality</label>
-                  <input type="text" id="nationality" class="form-control" required>
+                  <input type="text" id="nationality" class="form-control" list="nationalityOptions" required>
+                  <datalist id="nationalityOptions">
+                    <option value="Afghan">
+                    <option value="Albanian">
+                    <option value="Algerian">
+                    <option value="American">
+                    <option value="Argentine">
+                    <option value="Armenian">
+                    <option value="Australian">
+                    <option value="Austrian">
+                    <option value="Bangladeshi">
+                    <option value="Belgian">
+                    <option value="Brazilian">
+                    <option value="British">
+                    <option value="Bulgarian">
+                    <option value="Cambodian">
+                    <option value="Canadian">
+                    <option value="Chilean">
+                    <option value="Chinese">
+                    <option value="Colombian">
+                    <option value="Croatian">
+                    <option value="Cuban">
+                    <option value="Czech">
+                    <option value="Danish">
+                    <option value="Dutch">
+                    <option value="Egyptian">
+                    <option value="Filipino">
+                    <option value="Finnish">
+                    <option value="French">
+                    <option value="German">
+                    <option value="Greek">
+                    <option value="Hungarian">
+                    <option value="Indian">
+                    <option value="Indonesian">
+                    <option value="Iranian">
+                    <option value="Iraqi">
+                    <option value="Irish">
+                    <option value="Israeli">
+                    <option value="Italian">
+                    <option value="Japanese">
+                    <option value="Jordanian">
+                    <option value="Korean">
+                    <option value="Kuwaiti">
+                    <option value="Lebanese">
+                    <option value="Malaysian">
+                    <option value="Mexican">
+                    <option value="Moroccan">
+                    <option value="Nepalese">
+                    <option value="Norwegian">
+                    <option value="Pakistani">
+                    <option value="Peruvian">
+                    <option value="Polish">
+                    <option value="Portuguese">
+                    <option value="Romanian">
+                    <option value="Russian">
+                    <option value="Saudi">
+                    <option value="Singaporean">
+                    <option value="South African">
+                    <option value="Spanish">
+                    <option value="Sri Lankan">
+                    <option value="Swedish">
+                    <option value="Swiss">
+                    <option value="Thai">
+                    <option value="Turkish">
+                    <option value="Ukrainian">
+                    <option value="Venezuelan">
+                    <option value="Vietnamese">
+                  </datalist>
                 </div>
                 <div class="mb-2">
                   <label>Birthplace</label>
@@ -332,7 +399,7 @@
 
   <footer class="site-footer">
     <div class="container-fluid text-center">
-      <small>&copy; I LOVE YOU LANGGING | JANILYN</small>
+      <small>&copy; I LOVE YOU LANGGING</small>
     </div>
   </footer>
 
@@ -511,4 +578,3 @@
   </script>
 </body>
 </html>
-
