--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
   <footer class="site-footer">
     <div class="container-fluid text-center">
-      <small>&copy; I LOVE YOU LANGGING</small>
+      <small>&copy; I LOVE YOU LANGGING | JANILYN</small>
     </div>
   </footer>
 
@@ -578,3 +578,4 @@
   </script>
 </body>
 </html>
+
