--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
   <footer class="site-footer">
     <div class="container-fluid text-center">
-      <small>&copy; I LOVE YOU LANGGING</small>
+      <small>&copy; I LOVE YOU LANGGING | JANILYN</small>
     </div>
   </footer>
 
@@ -560,3 +560,4 @@
   </script>
 </body>
 </html>
+
