--- a/index.html
+++ b/index.html
@@ -241,6 +241,23 @@
       }
     }
 
+    /* Desktop / Website-only SweetAlert2 width override */
+    @media (min-width: 992px) {
+      .swal2-popup {
+        max-width: 800px !important; /* wider popup for desktop */
+        width: 700px !important;     /* preferred width */
+        padding: 1.75rem !important;
+      }
+
+      .swal2-title {
+        font-size: 1.25rem !important;
+      }
+
+      .swal2-html-container {
+        font-size: 1rem !important;
+      }
+    }
+
     /* Mobile responsiveness */
     @media (max-width: 576px) {
       body { padding: 0; margin: 0; }
